Wed Aug 25 12:28:50 PDT 1999	Michael Jennings <mej@eterm.org>

	Applied XIM fix from Sung-Hyun Nam <namsh@lgic.co.kr>.
	
-------------------------------------------------------------------------------
Fri Aug 27 19:39:26 PDT 1999	Michael Jennings <mej@eterm.org>

	Fix fix fix.
	
-------------------------------------------------------------------------------
Fri Sep  3 17:05:02 PDT 1999	Michael Jennings <mej@eterm.org>

	Eterm passes "make distcheck" now.  Hurray.
	
-------------------------------------------------------------------------------
Tue Sep  7 11:43:42 PDT 1999	Michael Jennings <mej@eterm.org>

	Added paranoia checks to make sure the desktop pixmap property hasn't
	been corrupted.
	
-------------------------------------------------------------------------------
Tue Sep  7 13:15:30 PDT 1999	Michael Jennings <mej@eterm.org>

	make distcheck works without breaking regular makes now. =P
	
-------------------------------------------------------------------------------
Wed Sep  8 11:11:00 PDT 1999	Michael Jennings <mej@eterm.org>

	Patch from Sung-Hyun Nam <namsh@lgic.co.kr> for the theme files.  Also
	added a timeout for the backtrace attempt so that it hopefully won't
	hang around forever when gdb decides to hang.
	
-------------------------------------------------------------------------------
Mon Sep 13 12:23:36 PDT 1999	Michael Jennings <mej@eterm.org>

	Removed the tn3270 theme, which nobody uses, and added the cEterm
	theme.  You get the same colors as Alfredo's original script, but
	without all the crap on the command line. :-)
	
-------------------------------------------------------------------------------
Tue Sep 14 16:41:08 PDT 1999	Michael Jennings <mej@eterm.org>

	Worked around a XF86 3.9.16 (perhaps Xinerama) problem.  Also added
	some XIM changes from Sung-Hyun Nam <namsh@lgic.co.kr> to handle
	buffer overflows.
	
-------------------------------------------------------------------------------