@@ -30,7 +30,6 @@ begin menu
 end
 begin menu
   title Toggles
-  font fixed
   begin menuitem
     text "Cursor Visible"
     action string "\e[?25t"
@@ -82,7 +81,6 @@ begin menu
 end
 begin menu
   title Keys
-  font fixed
   begin menuitem
     text "Application Arrow Keys"
     action string "\e[?1t"
@@ -102,7 +100,6 @@ begin menu
 end
 begin menu
   title Scrollbar
-  font fixed
   begin menuitem
     text "Toggle Visibility"
     rtext "Ctrl-Button2"
@@ -136,7 +133,6 @@ begin menu
 end
 begin menu
   title Width
-  font fixed
   begin menuitem
     text "5"
     action string "\e]6;10;;5;\a"
@@ -204,7 +200,6 @@ begin menu
 end
 begin menu
   title "Move to Desktop"
-  font fixed
   begin menuitem
     text "0"
     action string "\e]6;50;0;\a"
@@ -240,7 +235,6 @@ begin menu
 end
 begin menu
   title Terminal
-  font fixed
   begin menuitem
     text "Toggles"
     action submenu "Toggles"
@@ -271,7 +265,6 @@ end
 
 begin menu
   title Transparency
-  font fixed
   begin menuitem
     text "Force Update"
     action string "\e]6;3\a"
@@ -287,7 +280,6 @@ begin menu
 end
 begin menu
   title Tiled
-  font fixed
   begin menuitem
     text "70's Marble"
     action string "\e]20;70s_marble.png;0x0+0+0:tile\a"
@@ -419,7 +411,6 @@ begin menu
 end
 begin menu
   title Scaled
-  font fixed
   begin menuitem
     text "Alien Spheres"
     action string "\e]20;alien_spheres.jpg;100x100+50+50\a"
@@ -547,7 +538,6 @@ begin menu
 end
 begin menu
   title Attrib
-  font fixed
   begin menuitem
     text "Full Size"
     action string "\e]20;;100x100"
@@ -585,7 +575,6 @@ begin menu
 end
 begin menu
   title Pixmap
-  font fixed
   begin menuitem
     text "None"
     action string "\e[m\e]20;;\a"
@@ -610,7 +599,6 @@ begin menu
 end
 begin menu
   title Brightness
-  font fixed
   begin menuitem
     text "512 (200%)"
     action string "\e]6;1;image;brightness;512\a"
@@ -682,7 +670,6 @@ begin menu
 end
 begin menu
   title Contrast
-  font fixed
   begin menuitem
     text "512 (200%)"
     action string "\e]6;1;image;contrast;512\a"
@@ -754,7 +741,6 @@ begin menu
 end
 begin menu
   title Gamma
-  font fixed
   begin menuitem
     text "512 (200%)"
     action string "\e]6;1;image;gamma;512\a"
@@ -826,7 +812,6 @@ begin menu
 end
 begin menu
   title Background
-  font fixed
   begin menuitem
     text "Transparency"
     action submenu "Transparency"
@@ -857,7 +842,6 @@ define(HOST_ITEM, `begin menuitem
 # ALIEN_MENU(protocol)
 define(ALIEN_MENU, `begin menu
   title "Alien Cluster $1"
-  font fixed
   HOST_ITEM(`$1', `apone')
   HOST_ITEM(`$1', `ash')
   HOST_ITEM(`$1', `bishop')
@@ -871,7 +855,6 @@ define(ALIEN_MENU, `begin menu
 end')
 define(IT_MENU, `begin menu
   title "IT Hosts $1"
-  font fixed
   HOST_ITEM(`$1', `allen')
   HOST_ITEM(`$1', `babylon4')
   HOST_ITEM(`$1', `icarus')
@@ -883,7 +866,6 @@ define(IT_MENU, `begin menu
 end')
 define(COM_MENU, `begin menu
   title "3Com $1"
-  font fixed
   HOST_ITEM(`$1', `bkup-u2')
   HOST_ITEM(`$1', `bkup-us')
   HOST_ITEM(`$1', `corsys1')
@@ -929,13 +911,11 @@ define(COM_MENU, `begin menu
 end')
 define(EXT_MENU, `begin menu
   title "External $1"
-  font fixed
   HOST_ITEM(`$1', `foobar.com')
 end')
 
 define(PROTOCOL_MENU, `begin menu
   title "$1"
-  font fixed
   begin menuitem
     text "Alien Cluster"
     action submenu "Alien Cluster $1"
@@ -966,7 +946,6 @@ DO_PROTOCOL(ftp)
 
 begin menu
   title Chooser
-  font fixed
   ECHO_ITEM(`New Eterm Window', `Eterm &\r')
   -
   SUBMENU_ITEM(`ssh')
@@ -978,7 +957,6 @@ end
 # This is the menu that gets called by Ctrl-Button3
 begin menu
   title Eterm
-  font fixed
   SUBMENU_ITEM(Chooser)
   -
   SUBMENU_ITEM(Font)
