@@ -34,7 +34,6 @@ begin menu
 end
 begin menu
   title Toggles
-  font fixed
   begin menuitem
     text "Cursor Visible"
     action string "\e[?25t"
@@ -86,7 +85,6 @@ begin menu
 end
 begin menu
   title Keys
-  font fixed
   begin menuitem
     text "Application Arrow Keys"
     action string "\e[?1t"
@@ -106,7 +104,6 @@ begin menu
 end
 begin menu
   title Scrollbar
-  font fixed
   begin menuitem
     text "Toggle Visibility"
     rtext "Ctrl-Button2"
@@ -140,7 +137,6 @@ begin menu
 end
 begin menu
   title Width
-  font fixed
   begin menuitem
     text "5"
     action string "\e]6;10;;5;\a"
@@ -208,7 +204,6 @@ begin menu
 end
 begin menu
   title "Move to Desktop"
-  font fixed
   begin menuitem
     text "0"
     action string "\e]6;50;0;\a"
@@ -244,7 +239,6 @@ begin menu
 end
 begin menu
   title Terminal
-  font fixed
   begin menuitem
     text "Toggles"
     action submenu "Toggles"
@@ -275,7 +269,6 @@ end
 
 begin menu
   title Transparency
-  font fixed
   begin menuitem
     text "Force Update"
     action string "\e]6;3\a"
@@ -291,7 +284,6 @@ begin menu
 end
 begin menu
   title Tiled
-  font fixed
   begin menuitem
     text "70's Marble"
     action string "\e]20;70s_marble.png;0x0+0+0:tile\a"
@@ -423,7 +415,6 @@ begin menu
 end
 begin menu
   title Scaled
-  font fixed
   begin menuitem
     text "Alien Spheres"
     action string "\e]20;alien_spheres.jpg;100x100+50+50\a"
@@ -551,7 +542,6 @@ begin menu
 end
 begin menu
   title Attrib
-  font fixed
   begin menuitem
     text "Full Size"
     action string "\e]20;;100x100"
@@ -589,7 +579,6 @@ begin menu
 end
 begin menu
   title Pixmap
-  font fixed
   begin menuitem
     text "None"
     action string "\e[m\e]20;;\a"
@@ -614,7 +603,6 @@ begin menu
 end
 begin menu
   title Brightness
-  font fixed
   begin menuitem
     text "512 (200%)"
     action string "\e]6;1;image;brightness;512\a"
@@ -686,7 +674,6 @@ begin menu
 end
 begin menu
   title Contrast
-  font fixed
   begin menuitem
     text "512 (200%)"
     action string "\e]6;1;image;contrast;512\a"
@@ -758,7 +745,6 @@ begin menu
 end
 begin menu
   title Gamma
-  font fixed
   begin menuitem
     text "512 (200%)"
     action string "\e]6;1;image;gamma;512\a"
@@ -830,7 +816,6 @@ begin menu
 end
 begin menu
   title Background
-  font fixed
   begin menuitem
     text "Transparency"
     action submenu "Transparency"
@@ -855,7 +840,6 @@ end
 
 begin menu
   title "Messages"
-  font fixed
   begin menuitem
     text "New Message"
     action echo "m"
@@ -914,7 +898,6 @@ begin menu
 end
 begin menu
   title "Change to Folder"
-  font fixed
   begin menuitem
     text "Inbox"
     action echo "c!\r"
@@ -934,7 +917,6 @@ begin menu
 end
 begin menu
   title Forward
-  font fixed
   begin menuitem
     text "Forward by Message Date"
     action echo "od"
@@ -966,7 +948,6 @@ begin menu
 end
 begin menu
   title Reverse
-  font fixed
   begin menuitem
     text "Reverse by Date"
     action echo "Od"
@@ -999,7 +980,6 @@ end
 
 begin menu
   title Sort
-  font fixed
   begin menuitem
     text "Forward"
     action submenu Forward
@@ -1030,7 +1010,6 @@ end
 # This is the menu that gets called by Ctrl-Button3
 begin menu
   title Eterm
-  font fixed
   begin menuitem
     text "Messages"
     action submenu Messages
